# ComicGUISpider

./: .gitattributes  .gitignore  404.html  CGS.py  CNAME  LICENSE  README.md  README_en.md  conf.yml  crawl_go.py  crawl_only.py  gui.py  hashmap.json  index.html  material_ct.py  pyproject.toml  requirements.txt  scrapy.cfg  setting.yml  utils.py  更新软件api.txt
.github/: CONTRIBUTING.md  FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  rfc.yml
.github/scripts/: generate_hitomi_manifest.py  hitomi_db_gate.py  smoke_wheel.py
.github/workflows/: cf_pages.yml  del_workflow_runs.yml  gh_pages.yml  hitomi-db.yml  pre-release.yml  pypi.yml  release.yml  schedule_test.yml  sync.yml  sync_i18n.yml  win_full.yml
ComicSpider/: CUST.py  extensions.py  items.py  middlewares.py  pipelines.py  settings.py  utils.py
ComicSpider/runtime/: __init__.py  job_models.py  protocol.py  thread_runner.py
ComicSpider/spiders/: basecomicspider.py  basecomicspider2.py  comic90mh.py  comickukudm.py  ehentai.py  erocool.py  h_comic.py  hitomi.py  jm.py  joyhentai.py  kaobei.py  mangabz.py  wnacg.py
GUI/: __init__.py  browser_window.py  conf_dia.py  conf_dialog.py  fin_ensure_dialog.py  gui.py  hitmoti_tools.py  hitomi_tools.py  mainwindow.py  preview_window.py  processed_class.py  types.py  ui_helplabel.py  ui_mainwindow.py
GUI/components/: __init__.py  menu.py
GUI/core/: anim.py  doh_runtime.py  font.py  theme.py  timer.py
GUI/manager/: __init__.py  ags.py  async_task.py  clip.py  download.py  download_state.py  mid.py  preprocess.py  publish.py  rv.py  selection.py  task_progress.py
GUI/script/: __init__.py  avatar_cache.py  cbg.py  kemono.py
GUI/src/: material_ct.py
GUI/thread/: __init__.py  ags.py  manga_preview.py  mid.py  other.py  preview.py
GUI/tools/: __init__.py  ags.py  chore.py  domain.py  hitomi_tool.py  mid_tool.py  publish_page.py  rv_tool.py  status.py
GUI/uic/: __init__.py  browser.py  conf_dia.py  preview.py  ui_ensure_dia.py  ui_mainwindow.py
_github/: preset_preview.html  preset_stable.html  release_notes.html
assets/: _pystand_static.int  app.9LKYLKP0.js  app.B8A1cwbl.js  app.BI9izngB.js  app.BNynX-yk.js  app.BRmo923M.js  app.BbZwjGmk.js  app.BeB6b75-.js  app.BfLj94-v.js  app.BgXZVW5R.js  app.Bge6Gfry.js  app.BoyyWz0T.js  app.BqqCMsBu.js  app.BsXm_KQk.js  app.Bu9pwDNP.js  app.C5Bspazo.js  app.CBFI_4_G.js  app.CGt_DGp6.js  app.CLJVx0HV.js  app.Cblgxvn-.js  app.Cbu9SSa4.js  app.CgJm0FYD.js  app.ChvihuNQ.js  app.Ck7TFInJ.js  app.CnWeyHrX.js  app.CnjAXP9y.js  app.CuBL0jrG.js  app.Cxc1T_O1.js  app.D0JKDo-0.js  app.D0lFmnKi.js  app.D1SvYPXi.js  app.D7RoxOWS.js  app.D95jY0Lq.js  app.DBKCsm8l.js  app.DCTxJFPp.js  app.DI5gtPuT.js  app.DJBzLZW8.js  app.DKc3AnbF.js  app.DTQmqR0n.js  app.DYhuvv5z.js  (+485 more)
assets/chunks/: @localSearchIndexen.4dicSaWT.js  @localSearchIndexen.B3SOqPKM.js  @localSearchIndexen.BGlmkHMr.js  @localSearchIndexen.BPTwSe5E.js  @localSearchIndexen.BcEZkOAr.js  @localSearchIndexen.C-c4Q06L.js  @localSearchIndexen.C24wQ0c0.js  @localSearchIndexen.C76qr9NP.js  @localSearchIndexen.C7go7aQN.js  @localSearchIndexen.C8_P6VmE.js  @localSearchIndexen.CO-hfcgr.js  @localSearchIndexen.CQyu9N3n.js  @localSearchIndexen.CSZGnPy9.js  @localSearchIndexen.CV3FqAyD.js  @localSearchIndexen.CVFWij9G.js  @localSearchIndexen.CqbSGM2y.js  @localSearchIndexen.DKSJHsUQ.js  @localSearchIndexen.DTHhg1p9.js  @localSearchIndexen.De1nzLZv.js  @localSearchIndexen.Dk-eSO08.js  @localSearchIndexen.DwmUMysQ.js  @localSearchIndexen._QsoCBe-.js  @localSearchIndexen.nwYbrTKc.js  @localSearchIndexen.vQ_iXUhA.js  @localSearchIndexen.y5CKDDfX.js  @localSearchIndexroot.7bOKQKCS.js  @localSearchIndexroot.B07HAoI2.js  @localSearchIndexroot.B4nRU5Zp.js  @localSearchIndexroot.BDhxYTUE.js  @localSearchIndexroot.BSlTNWz8.js  @localSearchIndexroot.BUGwSTm3.js  @localSearchIndexroot.BWf1Vpi3.js  @localSearchIndexroot.B_n-bP0p.js  @localSearchIndexroot.BdQGeFwM.js  @localSearchIndexroot.BloJstvp.js  @localSearchIndexroot.Bp0cFjXB.js  @localSearchIndexroot.BpfIGard.js  @localSearchIndexroot.BsPDc-K7.js  @localSearchIndexroot.Bva1TS38.js  @localSearchIndexroot.Bx1me4OC.js  (+155 more)
assets/res/: __init__.py  transfer.py
changelog/: history.html
config/: index.html  other.html
deploy/: __init__.py  env_record.json  mac-required-reading.html  packer.py  pkg_mgr.py  quick-start.html  t.json  update.py
deploy/installer/: build.rs
deploy/launcher/: CGS.bat  init.bat  update.bat
deploy/online_scripts/: win.ps1
dev/: contribute.html  dev_spider.html  i18n.html
docs/: FAQ_and_EXTRA.md  README_en.md  UPDATE_RECORD.md  index.md  package.json  script.md
docs/.vitepress/: config.ts
docs/CONTRIBUTING/: i18n.md  index.md  spider.md
docs/_github/: README_en.md  preset_preview.md  preset_stable.md  release_notes.md
faq/: extra.html  index.html  other.html
feat/: ags.html  clip.html  index.html  script.html
feature/: index.html  script.html
home/: index.html
launcher/: CGS.bat  desc.bat  update.bat
requirements/: linux.txt  mac_arm64.txt  mac_x86_64.txt  win.txt
tools/installer/: Cargo.toml
tools/installer/src/: gui.rs  main.rs  process.rs
utils/: __init__.py  comic_viewer_tools.py  core.py  docs.py  processed_class.py  protocol.py  redViewer_tools.py  special.py
variables/: __init__.py
(+236 files in other folders)
