[project]
name = "ComicGUISpider"
version = "2.3.2-beta"
description = "GUI Comic Downloader"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx[http2]",
    "jsonpath_rw",
    "aiofiles",
    "colorama",
    "loguru",
    "lxml",
    "PyQt5",
    "PyYAML",
    "tqdm",
    "brotli",
    "markdown",
    "PyQtWebEngine",
    "PyExecJS",
    "PyQt-Fluent-Widgets",
    "polib",
    "pillow-avif-plugin",
    "uv",
    "uncurl",
    "urllib3>=2.5.0",
    "Pillow>=11.3.0",
    "Scrapy>=2.13.0",
    "setuptools>=78.1.1",
    "h11>=0.16.0",
    "requests>=2.32.4",
    "psutil",
]

[project.optional-dependencies]
script = [
    "redis",
    "pandas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Repository = "https://github.com/jasoneri/ComicGUISpider"
Documentation = "https://jasoneri.github.io/ComicGUISpider/"
Changelog = "https://github.com/jasoneri/ComicGUISpider/blob/GUI/docs/changelog/history.md"
Releases = "https://github.com/jasoneri/ComicGUISpider/releases"
