[project]
name = "ComicGUISpider"
version = "2.9.11"
description = "GUI Comic Downloader"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx[http2]",
    "dnspython",
    "jsonpath_rw",
    "aiofiles",
    "colorama",
    "loguru",
    "lxml",
    "PySide6>=6.11,<6.12",
    "PyYAML",
    "tqdm",
    "brotli",
    "markdown",
    "PyExecJS",
    "PySide6-Fluent-Widgets",
    "polib",
    "pillow-avif-plugin",
    "uv",
    "uncurl",
    "urllib3>=2.5.0",
    "Pillow>=11.3.0",
    "Scrapy>=2.13.0",
    "setuptools>=78.1.1",
    "h11>=0.16.0",
    "requests>=2.32.4",
    "psutil",
    "redis",
    "pandas",
    "curl-cffi>=0.14.0",
]
authors = [
    {name = "jsoneri", email = "jsoneri@outlook.com"},
]
keywords = ["comic", "spider", "downloader", "gui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
script = [
    "redis",
    "pandas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "assets/",
    "ComicSpider/",
    "deploy/",
    "GUI/",
    "utils/",
    "variables/",
    "custom/",
    "docs/public/*.png",
    "CGS.py",
    "crawl_only.py",
    "scrapy.cfg"
]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Repository = "https://github.com/jasoneri/ComicGUISpider"
Documentation = "https://cgs.101114105.xyz/"
Changelog = "https://cgs.101114105.xyz/changelog/history"
Releases = "https://github.com/jasoneri/ComicGUISpider/releases"

[project.scripts]
cgs-cli = "crawl_only:main"

[project.gui-scripts]
cgs = "CGS:start"
comicguispider = "CGS:start"
