[package]
name = "cgs-installer"
version = "2.8.6"
edition = "2024"

[[bin]]
name = "installer"
path = "src/main.rs"

[dependencies]
eframe = "0.33"
clap = { version = "4.5", features = ["derive"] }
pep440_rs = "0.7"
regex = "1.12"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
